# intaglio

./: .gitignore  .rubocop.yml  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  crates.js  deny.toml  help.html  package-lock.json  package.json  search-index.js  settings.html  source-files.js  src-files.js
.config/: artichoke.dic
.github/: dependabot.yml  labels.json  labels.yaml
.github/workflows/: audit.yaml  bench.yaml  block-merge.yaml  ci.yaml  code-coverage.yaml  miri.yaml  rustdoc.yaml
benches/: benchmarks.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
bstr/: struct.BStr.html  struct.Finder.html  struct.FinderReverse.html  struct.Utf8Error.html  trait.ByteSlice.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/collect/: trait.IntoIterator.js
implementors/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
implementors/core/iter/traits/exact_size/: trait.ExactSizeIterator.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/iter/traits/marker/: trait.FusedIterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
intaglio/: all.html  constant.DEFAULT_SYMBOL_TABLE_CAPACITY.html  index.html  sidebar-items.js  struct.AllSymbols.html  struct.Iter.html  struct.Strings.html  struct.Symbol.html  struct.SymbolOverflowError.html  struct.SymbolTable.html
intaglio/bytes/: index.html  struct.AllSymbols.html  struct.Bytestrings.html  struct.Iter.html  struct.SymbolTable.html
intaglio/cstr/: index.html  sidebar-items.js  struct.AllSymbols.html  struct.CStrings.html  struct.Iter.html  struct.SymbolTable.html
intaglio/osstr/: index.html  sidebar-items.js  struct.AllSymbols.html  struct.Iter.html  struct.OsStrings.html  struct.SymbolTable.html
intaglio/path/: index.html  sidebar-items.js  struct.AllSymbols.html  struct.Iter.html  struct.Paths.html  struct.SymbolTable.html
src/: bytes.rs  convert.rs  cstr.rs  internal.rs  lib.rs  osstr.rs  path.rs  str.rs
src/intaglio/: bytes.rs.html  convert.rs.html  cstr.rs.html  eq.rs.html  internal.rs.html  lib.rs.html  osstr.rs.html  path.rs.html  str.rs.html
tests/: leak_drop_symbol_table.rs  leak_drop_symbol_table_bytes.rs  leak_drop_symbol_table_cstr.rs  leak_drop_symbol_table_osstr.rs  leak_drop_symbol_table_path.rs
tests/leak/: mod.rs
tests/leak_drop/: bytes.rs  cstr.rs  main.rs  osstr.rs  path.rs  str.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/convert/: trait.From.js  trait.TryFrom.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/iter/traits/collect/: trait.IntoIterator.js
trait.impl/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
trait.impl/core/iter/traits/exact_size/: trait.ExactSizeIterator.js
trait.impl/core/iter/traits/iterator/: trait.Iterator.js
trait.impl/core/iter/traits/marker/: trait.FusedIterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/drop/: trait.Drop.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
