[package]
name = "intaglio"
version = "1.2.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
description = "UTF-8 string and bytestring interner and symbol table"
repository = "https://github.com/artichoke/intaglio"
readme = "README.md"
license = "MIT"
keywords = ["bytestring", "intern", "interner", "symbol", "utf8"]
categories = ["caching", "data-structures"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]
# All features are enabled by default.
default = ["bytes"]
# `bytes` feature enables an additional symbol table implementation for
# interning bytestrings (`Vec<u8>` and `&'static [u8]`).
bytes = []

[dependencies]

[dev-dependencies]
# Property testing for interner getters and setters.
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = "1.0"
# Check that crate versions are properly updated in documentation and code when
# bumping the version.
version-sync = "0.9, >= 0.9.2"
