[package]
name = "intaglio"
version = "1.4.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"
repository = "https://github.com/artichoke/intaglio"
documentation = "https://docs.rs/intaglio"
homepage = "https://github.com/artichoke/intaglio"
description = "UTF-8 string and bytestring interner and symbol table"
keywords = ["bytestring", "intern", "interner", "symbol", "utf8"]
categories = ["caching", "data-structures"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]
# All features are enabled by default.
default = ["bytes"]
# `bytes` feature enables an additional symbol table implementation for
# interning bytestrings (`Vec<u8>` and `&'static [u8]`).
bytes = []

[dependencies]

[dev-dependencies]
# Property testing for interner getters and setters.
quickcheck = { version = "1.0", default-features = false }
quickcheck_macros = "1.0"
# Check that crate versions are properly updated in documentation and code when
# bumping the version.
version-sync = "0.9, >= 0.9.2"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `intaglio` has the same API and code on all targets.
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
