[package]
name = "intaglio"
version = "1.5.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2021"
rust-version = "1.56.0"
readme = "README.md"
repository = "https://github.com/artichoke/intaglio"
documentation = "https://docs.rs/intaglio"
homepage = "https://github.com/artichoke/intaglio"
description = "UTF-8 string and byte string interner and symbol table"
keywords = ["bytestring", "intern", "interner", "symbol", "utf8"]
categories = ["caching", "data-structures"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]
# All features are enabled by default.
default = ["bytes", "cstr", "osstr", "path"]
# `bytes` feature enables an additional symbol table implementation for
# interning byte strings (`Vec<u8>` and `&'static [u8]`).
bytes = []
# `cstr` feature enables an additional symbol table implementation for
# interning C strings (`CString` and `&'static CStr`).
cstr = []
# `osstr` feature enables an additional symbol table implementation for
# interning platform strings (`OsString` and `&'static OsStr`).
osstr = []
# `path` feature enables an additional symbol table implementation for
# interning path strings (`PathBuf` and `&'static Path`).
path = []

[dependencies]

[dev-dependencies]
# Property testing for interner getters and setters.
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `intaglio` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
