[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
publish = false

[workspace]
members = ["."]

[[bench]]
name = "benchmarks"
harness = false

[dependencies]

[dev-dependencies]
# Benchmarking support on stable Rust.
criterion = "0.5.1"
# benchmark target
intaglio = { path = ".." }
